# locowebflow

./: README.md  pyproject.toml  requirements.txt
example/: example_site.toml
loconotion/modules/: conditions.py  main.py  notionparser.py
loconotion/tests/: test_inject_custom_tags.py  test_parser.py
locowebflow/: __main__.py  static_webpage.sh
locowebflow/modules/: conditions.py  main.py  webflowparser.py  webflowparser.pyi
locowebflow/tests/: test_inject_custom_tags.py  test_parser.py
