[tool.poetry]
name = "locowebflow"
version = "1.0.0"
description = "📄 Python tool to export webflow sites into github pages "
authors = ["sofia escobedo <sofia@escobedo.mx>","Leonardo Cavaletti <impeto.blu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.9.1"
colorama = "^0.4.3"
selenium = "^4.29.0"
toml = "^0.10.1"
html5lib = "^1.1"
chromedriver = "^2.24.1"
cssutils = "^2.11.1"
requests = "^2.32.3"
poetry = ">=1.8.4"
chromedriver-autoinstaller = "^0.6.4"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.5"

[build-system]
requires = ["poetry>=1.8.4"]
build-backend = "poetry.masonry.api"
